--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </div>
     </a>
     <div class="navbar-links">
+      <a href="intro.html" class="white-link">Intro</a>
       <a href="about.html" class="white-link">About</a>
       <a href="projects.html" class="white-link">Projects</a>
       <a href="contact.html" class="white-link">Contact</a>
