--- a/intro.html
+++ b/intro.html
@@ -4,25 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>About</title>
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <div class="blue-navbar">
+  <div class="white-navbar">
     <a href="index.html">
       <div class="navbar-logo">
         <img class="logo" src="./css/img/logo.png" alt="RRR Logo">
       </div>
     </a>
     <div class="navbar-links">
-      <a href="intro.html" class="white-link">Intro</a>
-      <a href="about.html" class="white-link">About</a>
-      <a href="projects.html" class="white-link">Projects</a>
-      <a href="contact.html" class="white-link">Contact</a>
+      <a href="intro.html" class="black-link">Intro</a>
+      <a href="about.html" class="black-link">About</a>
+      <a href="projects.html" class="black-link">Projects</a>
+      <a href="contact.html" class="black-link">Contact</a>
     </div>
-    <div class="main-container">          
-    </div>
-  </div>  
+  </div>
+  <div class="about-container">
+      <img class="avatar-logo" src="./css/img/avatar.png" alt="Avatar Logo">
+  </div>
   
 </body>
 </html>
