--- a/projects.html
+++ b/projects.html
@@ -15,11 +15,12 @@
       </div>
     </a>
     <div class="navbar-links">
+      <a href="intro.html" class="black-link">Intro</a>
       <a href="about.html" class="black-link">About</a>
       <a href="projects.html" class="black-link">Projects</a>
       <a href="contact.html" class="black-link">Contact</a>
     </div>
   </div>
-  
+ 
 </body>
-</html>
+</html> 
