--- a/about.html
+++ b/about.html
@@ -8,21 +8,35 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <div class="blue-navbar">
+  <div class="white-navbar">
     <a href="index.html">
       <div class="navbar-logo">
         <img class="logo" src="./css/img/logo.png" alt="RRR Logo">
       </div>
     </a>
     <div class="navbar-links">
-      <a href="intro.html" class="white-link">Intro</a>
-      <a href="about.html" class="white-link">About</a>
-      <a href="projects.html" class="white-link">Projects</a>
-      <a href="contact.html" class="white-link">Contact</a>
+      <a href="intro.html" class="black-link">Intro</a>
+      <a href="about.html" class="black-link">About</a>
+      <a href="projects.html" class="black-link">Projects</a>
+      <a href="contact.html" class="black-link">Contact</a>
     </div>
-    <div class="main-container">          
-    </div>
-  </div>  
+  </div>
+  <div class="main-container-white"> 
+    <div class="about-container">
+      <div class="about-grid">
+        <h3 class="about-header">Employment</h3> 
+        <div class="personality-content">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos culpa nemo labore beatae necessitatibus. Totam porro nobis tenetur alias? Veritatis quibusdam esse, est quae veniam maxime dolore temporibus molestias autem.</p>
+        </div>
+        <h3 class="work-header">Education</h3>    
+        <div class="work-content">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos culpa nemo labore beatae necessitatibus. Totam porro nobis tenetur alias? Veritatis quibusdam esse, est quae veniam maxime dolore temporibus molestias autem.</p>
+        </div>
+      </div>
+
+    </div>         
+  </div>
+
   
 </body>
 </html>
