--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <div class="blue-navbar">
+  <div class="white-navbar">
     <a href="index.html">
       <div class="navbar-logo">
        <img class="logo" src="./css/img/logo.png" alt="RRR Logo">
       </div>
     </a>
     <div class="navbar-links">
-      <a href="intro.html" class="white-link">Intro</a>
-      <a href="about.html" class="white-link">About</a>
-      <a href="projects.html" class="white-link">Projects</a>
-      <a href="contact.html" class="white-link">Contact</a>
+      <a href="intro.html" class="black-link">Intro</a>
+      <a href="about.html" class="black-link">About</a>
+      <a href="projects.html" class="black-link">Projects</a>
+      <a href="contact.html" class="black-link">Contact</a>
     </div>
-    <div class="main-container">          
+    <div class="main-container-white">          
       <h1>Rommel Ryan Rico</h1>
     </div>
   </div>
