--- a/intro.html
+++ b/intro.html
@@ -21,8 +21,11 @@
       <a href="contact.html" class="black-link">Contact</a>
     </div>
   </div>
-  <div class="about-container">
-      <img class="avatar-logo" src="./css/img/avatar.png" alt="Avatar Logo">
+  <div class="main-container-white">
+      <img class="avatar-logo" src="./css/img/dp.png" alt="Avatar Logo">
+      <div class="intro-content">
+        <p>Hi my name is Ryan. Welcome to my Portfolio!</p>
+      </div>
   </div>
   
 </body>
