--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,16 @@
       <a href="projects.html" class="black-link">Projects</a>
       <a href="contact.html" class="black-link">Contact</a>
     </div>
+    <div class="projects-container">
+      <div class="projects-grid">
+        <!-- <div class="project1"></div>
+        <div class="project2"></div>
+        <div class="project3"></div>
+        <div class="project4"></div>
+        <div class="project5"></div>
+        <div class="project6"></div> -->
+      </div>
+    </div>
   </div>
  
 </body>
