finished projects page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>About</title>
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -24,14 +24,16 @@
   <div class="main-container-white"> 
     <div class="about-container">
       <div class="about-grid">
-        <h3 class="about-header">Employment</h3> 
-        <div class="personality-content">
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos culpa nemo labore beatae necessitatibus. Totam porro nobis tenetur alias? Veritatis quibusdam esse, est quae veniam maxime dolore temporibus molestias autem.</p>
+        <div class="career-header">
+          <h3>Career</h3>
         </div>
-        <h3 class="work-header">Education</h3>    
-        <div class="work-content">
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos culpa nemo labore beatae necessitatibus. Totam porro nobis tenetur alias? Veritatis quibusdam esse, est quae veniam maxime dolore temporibus molestias autem.</p>
+        <div class="job1"></div>
+        <div class="job2"></div>
+        <div class="education-header">
+          <h3>Education</h3>  
         </div>
+        <div class="education1"></div>
+        <div class="education2"></div>
       </div>
 
     </div>         
