--- a/projects.html
+++ b/projects.html
@@ -22,12 +22,12 @@
     </div>
     <div class="projects-container">
       <div class="projects-grid">
-        <!-- <div class="project1"></div>
+        <div class="project1"></div>
         <div class="project2"></div>
         <div class="project3"></div>
         <div class="project4"></div>
         <div class="project5"></div>
-        <div class="project6"></div> -->
+        <div class="project6"></div>
       </div>
     </div>
   </div>
