Finished projects page

--- a/intro.html
+++ b/intro.html
@@ -24,7 +24,7 @@
   <div class="main-container-white">
       <img class="avatar-logo" src="./css/img/dp.png" alt="Avatar Logo">
       <div class="intro-content">
-        <p>Hi my name is Ryan. Welcome to my Portfolio!</p>
+        <p>Hello my name is Ryan. I am on a mission to find the best company to work for in the galaxy!</p>
       </div>
   </div>
   
