--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <div class="about-container">
       <div class="about-grid">
         <div class="career-header">
-          <h3>Career</h3>
+          <h3>Work</h3>
         </div>
         <div class="job1"></div>
         <div class="job2"></div>
