finished contact page

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
       <a href="projects.html" class="black-link">Projects</a>
       <a href="contact.html" class="black-link">Contact</a>
     </div>
-    <div class="projects-container">
+    <div class="main-container-white">
       <div class="projects-grid">
         <div class="project1"></div>
         <div class="project2"></div>
