--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,32 @@
       <a href="projects.html" class="black-link">Projects</a>
       <a href="contact.html" class="black-link">Contact</a>
     </div>
-    <div class="main-container-white">          
+    <div class="main-container-white">
+      <div class="contact-grid">
+        <div class="contact-header">Contact</div>
+        <div class="form-container">
+          <form action="#">
+              <input type="text" id="name" name="name" placeholder="name"><br><br>
+              <input type="email" id="email" name="email" placeholder="email"><br><br>
+              <textarea  id="comment-box" name="comment-box"></textarea><br><br>
+              <div id="submit">
+                <input type="submit" id="submit" value="Submit">
+              </div>
+          </form>
+        </div>
+        <div class="form-bottom-container">
+            <div class="navbar-logo">
+                <img src="./css/img/logo.png" alt="RRR Logo">
+            </div>
+            <div class="social-container">
+              <img src="./css/img/Twitter Button.png" alt="" class="social-button">
+              <img src="./css/img/Github Button.png" alt="" class="social-button">
+              <img src="./css/img/Linkedin Button.png" alt="" class="social-button">
+            </div>
+            <footer id="footer">Rommel Ryan Rico 2019</footer>
+        </div>
+       
+      </div>          
     </div>
   </div>  
 
