--- a/about.html
+++ b/about.html
@@ -24,15 +24,39 @@
     <div class="main-container-white">
       <div class="about-grid">
         <div class="career-header">
-          <h3>Work</h3>
+          <h3>Work History</h3>
         </div>
-        <div class="job1"></div>
-        <div class="job2"></div>
+        <div class="flip-card1">
+          <div class="flip-card1-inner">
+            <div class="job1"></div>
+            <div class="job1-back"></div>
+          </div>
+        </div>
+        <div class="flip-card2">
+          <div class="flip-card2-inner">
+            <div class="job2"></div>
+            <div class="job2-back"></div>
+          </div>
+        </div>
         <div class="education-header">
-          <h3>Education</h3>  
+          <h3>Educational Background</h3>  
         </div>
-        <div class="education1"></div>
-        <div class="education2"></div>
+        <div class="flip-card3">
+          <div class="flip-card3-inner">
+            <div class="education1"></div>
+            <div class="education1-back"></div>
+          </div>
+        </div>
+        <div class="flip-card4">
+          <div class="flip-card4-inner">
+            <div class="education2"></div>
+            <div class="education2-back"></div>
+          </div>
+        </div>
+
+
+        
+        
       </div>
 
     </div>         
