--- a/contact.html
+++ b/contact.html
@@ -22,12 +22,12 @@
     </div>
     <div class="main-container-white">
       <div class="contact-grid">
-        <div class="contact-header">Contact</div>
+        <div class="contact-header">Contact Me</div>
         <div class="form-container">
-          <form action="#">
-              <input type="text" id="name" name="name" placeholder="name"><br><br>
-              <input type="email" id="email" name="email" placeholder="email"><br><br>
-              <textarea  id="comment-box" name="comment-box"></textarea><br><br>
+          <form method="POST" action="https://formspree.io/contact@rommelryanrico.com">
+              <input type="text" id="name" name="name" placeholder="Enter your name"><br><br>
+              <input type="email" id="email" name="email" placeholder="Enter your email"><br><br>
+              <textarea  id="comment-box" name="comment-box" placeholder="Pay respects here..."></textarea><br><br>
               <div id="submit">
                 <input type="submit" id="submit" value="Submit">
               </div>
@@ -38,11 +38,11 @@
                 <img src="./css/img/logo.png" alt="RRR Logo">
             </div>
             <div class="social-container">
-              <img src="./css/img/Twitter Button.png" alt="" class="social-button">
-              <img src="./css/img/Github Button.png" alt="" class="social-button">
-              <img src="./css/img/Linkedin Button.png" alt="" class="social-button">
+              <img src="./css/img/Twitter Button.png" alt="Twitter" class="social-button">
+              <img src="./css/img/Github Button.png" alt="Github" class="social-button">
+              <img src="./css/img/Linkedin Button.png" alt="Linkedin" class="social-button">
             </div>
-            <footer id="footer">Rommel Ryan Rico 2019</footer>
+            <footer id="footer">ROMMEL RYAN RICO © 2019</footer>
         </div>
        
       </div>          
