--- a/intro.html
+++ b/intro.html
@@ -22,10 +22,14 @@
     </div>
   </div>
   <div class="main-container-white">
-      <img class="avatar-logo" src="./css/img/dp.png" alt="Avatar Logo">
-      <div class="intro-content">
-        <p>Hello my name is Ryan. I am on a mission to find the best company to work for in the galaxy!</p>
+    <div class="intro-grid">
+      <div class="avatar-logo">
+        <img class="avatar" src="./css/img/wouthelmet.png" alt="Avatar Logo">
       </div>
+      <div class="intro-content">
+        <p style="border: solid black 2px; padding: 5px;">Hello my name is Ryan and I am a web developer. I'm on a mission to find the best people to collaborate with!</p>
+      </div>
+    </div>
   </div>
   
 </body>
