--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       <div class="contact-grid">
         <div class="contact-header">Contact Me</div>
         <div class="form-container">
-          <form method="POST" action="https://formspree.io/contact@rommelryanrico.com">
+          <form method="POST" action="https://formspree.io/rommelryanrico@hotmail.com">
               <input type="text" id="name" name="name" placeholder="Enter your name"><br><br>
               <input type="email" id="email" name="email" placeholder="Enter your email"><br><br>
               <textarea  id="comment-box" name="comment-box" placeholder="Pay respects here..."></textarea><br><br>
