change logo size

--- a/about.html
+++ b/about.html
@@ -29,13 +29,23 @@
         <div class="flip-card1">
           <div class="flip-card1-inner">
             <div class="job1"></div>
-            <div class="job1-back"></div>
+            <div class="job1-back">
+              <div class="job1-back-content">
+                <h4>Salsas Fresh Mex</h4>
+                <p>Team Leader/Assistant Manager of a Mexican food franchise, g up the store.</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="flip-card2">
           <div class="flip-card2-inner">
             <div class="job2"></div>
-            <div class="job2-back"></div>
+            <div class="job2-back">
+              <div class="job2-back-content">
+                <h4>Aegis Call Center</h4>
+                <p></p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="education-header">
