change contact logo size

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         </div>
         <div class="form-bottom-container">
             <div class="navbar-logo">
-                <img src="./css/img/logo.png" alt="RRR Logo">
+                <img class="logo" src="./css/img/logo.png" alt="RRR Logo">
             </div>
             <div class="social-container">
               <img src="./css/img/Twitter Button.png" alt="Twitter" class="social-button">
