--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
           </form>
         </div>
         <div class="form-bottom-container">
-            <div class="navbar-logo">
-                <img class="logo" src="./css/img/logo.png" alt="RRR Logo">
+            <div class="logo-contact-container">
+              <img class="logo-contact" src="./css/img/logo.png" alt="RRR Logo">
             </div>
             <div class="social-container">
               <img src="./css/img/Twitter Button.png" alt="Twitter" class="social-button">
