finished job/education content

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <div class="job1-back">
               <div class="job1-back-content">
                 <h4>Salsas Fresh Mex</h4>
-                <p>Team Leader/Assistant Manager of a Mexican food franchise, g up the store.</p>
+                <p>Team Leader</p>
               </div>
             </div>
           </div>
@@ -43,7 +43,9 @@
             <div class="job2-back">
               <div class="job2-back-content">
                 <h4>Aegis Call Center</h4>
-                <p></p>
+                <h4>(G-Star Campaign)</h4>
+                <p>Customer Service</p>
+                <p>Representative</p>
               </div>
             </div>
           </div>
@@ -54,13 +56,24 @@
         <div class="flip-card3">
           <div class="flip-card3-inner">
             <div class="education1"></div>
-            <div class="education1-back"></div>
+            <div class="education1-back">
+              <div class="education1-back-content">
+                <h4>Bachelor of Commerce (Accounting)</h4>
+                <p>2013 - 2016</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="flip-card4">
           <div class="flip-card4-inner">
             <div class="education2"></div>
-            <div class="education2-back"></div>
+            <div class="education2-back">
+              <div class="education2-back-content">
+                <h4>Coder Academy</h4>
+                <p>(Fast-Track)</p>
+                <p>2019</p>
+              </div>
+            </div>
           </div>
         </div>
 
