--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
               <div class="job1-back-content">
                 <h4>Salsas Fresh Mex</h4>
                 <p>Team Leader</p>
+                <p>2010 - 2014</p>
               </div>
             </div>
           </div>
@@ -43,9 +44,9 @@
             <div class="job2-back">
               <div class="job2-back-content">
                 <h4>Aegis Call Center</h4>
-                <h4>(G-Star Campaign)</h4>
+                <!-- <h4>(G-Star Campaign)</h4> -->
                 <p>Customer Service</p>
-                <p>Representative</p>
+                <p>2015 - 2019</p>
               </div>
             </div>
           </div>
@@ -58,7 +59,8 @@
             <div class="education1"></div>
             <div class="education1-back">
               <div class="education1-back-content">
-                <h4>Bachelor of Commerce (Accounting)</h4>
+                <h4>Bachelor of Commerce</h4>
+                <h4>(Accounting)</h4>
                 <p>2013 - 2016</p>
               </div>
             </div>
