finished mobile version

--- a/about.html
+++ b/about.html
@@ -44,7 +44,6 @@
             <div class="job2-back">
               <div class="job2-back-content">
                 <h4>Aegis Call Center</h4>
-                <!-- <h4>(G-Star Campaign)</h4> -->
                 <p>Customer Service</p>
                 <p>2015 - 2019</p>
               </div>
@@ -60,7 +59,7 @@
             <div class="education1-back">
               <div class="education1-back-content">
                 <h4>Bachelor of Commerce</h4>
-                <h4>(Accounting)</h4>
+                <p>(Accounting)</p>
                 <p>2013 - 2016</p>
               </div>
             </div>
