--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
               <a href="https://github.com/rommelryanrico"><img src="./css/img/Github Button.png" alt="Github" class="social-button"></a>
               <a href="https://www.linkedin.com/in/rommelryanrico/"><img src="./css/img/Linkedin Button.png" alt="Linkedin" class="social-button"></a>
             </div>
-            <footer id="footer">Rommel Ryan Rico ©</footer>
+            <footer id="footer">Rommel Ryan Rico © 2019</footer>
         </div>
        
       </div>          
