--- a/intro.html
+++ b/intro.html
@@ -27,7 +27,7 @@
         <img class="avatar" src="./css/img/wouthelmet.png" alt="Avatar Logo">
       </div>
       <div class="intro-content">
-        <p style="border: solid black 2px; padding: 5px;">Hello my name is Ryan and I am a web developer from Melbourne, Australia. I'm on a mission to find the best people to collaborate with!</p>
+        <p class="intro-paragraph">Hello my name is Ryan and I'm a full-stack web developer from Melbourne, Australia. I'm on a mission to find the best people to collaborate with!</p>
       </div>
     </div>
   </div>
