--- a/projects.html
+++ b/projects.html
@@ -22,12 +22,24 @@
     </div>
     <div class="main-container-white">
       <div class="projects-grid">
-        <div class="project1"></div>
-        <div class="project2"></div>
-        <div class="project3"></div>
-        <div class="project4"></div>
-        <div class="project5"></div>
-        <div class="project6"></div>
+        <div class="project1">
+          <div class="project-overlay"></div>
+        </div>
+        <div class="project2">
+          <div class="project-overlay"></div>
+        </div>
+        <div class="project3">
+          <div class="project-overlay"></div>
+        </div>
+        <div class="project4">
+          <div class="project-overlay"></div>
+        </div>
+        <div class="project5">
+          <div class="project-overlay"></div>
+        </div>
+        <div class="project6">
+          <div class="project-overlay"></div>
+        </div>
       </div>
     </div>
   </div>
