border around contact box

--- a/about.html
+++ b/about.html
@@ -9,11 +9,9 @@
 </head>
 <body>
   <div class="white-navbar">
-    <a href="index.html">
-      <div class="navbar-logo">
-        <img class="logo" src="./css/img/logo.png" alt="RRR Logo">
-      </div>
-    </a>
+    <div class="navbar-logo">
+        <a href="index.html"><img class="logo" src="./css/img/logo.png" alt="RRR Logo"></a>
+    </div>
     <div class="navbar-links">
       <a href="intro.html" class="black-link">Intro</a>
       <a href="about.html" class="black-link">About</a>
