finished spaceship animation and made website compatible with other browsers

--- a/about.html
+++ b/about.html
@@ -36,6 +36,9 @@
             </div>
           </div>
         </div>
+        <div class="about-spaceship">
+          <img class="spaceship" src="./css/img/200.gif" alt="Spaceship">
+        </div>
         <div class="flip-card2">
           <div class="flip-card2-inner">
             <div class="job2"></div>
@@ -75,15 +78,8 @@
             </div>
           </div>
         </div>
-
-
-        
-        
       </div>
-
     </div>         
   </div>
-
-  
 </body>
 </html>
