--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,14 @@
     <div class="main-container-white">
       <div class="contact-grid">
         <div class="contact-header">Contact Form</div>
+        <div class="contact-spaceship">
+          <img class="spaceship" src="./css/img/200.gif" alt="Spaceship">
+        </div>
         <div class="form-container">
           <form method="POST" action="https://formspree.io/rommelryanrico@hotmail.com">
-              <input type="text" id="name" name="name" placeholder="name"><br><br>
-              <input type="email" id="email" name="email" placeholder="email"><br><br>
-              <textarea  id="comment-box" name="comment-box"></textarea><br><br>
+              <input type="text" id="name" name="name" placeholder=" name"><br><br>
+              <input type="email" id="email" name="email" placeholder=" email"><br><br>
+              <textarea  id="comment-box" name="comment-box" placeholder=" comments"></textarea><br><br>
               <div id="submit">
                 <input type="submit" id="submit" value="Submit">
               </div>
@@ -46,7 +49,5 @@
       </div>          
     </div>
   </div>  
-
-  
 </body>
 </html>
