--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
       <a href="projects.html" class="black-link">Projects</a>
       <a href="contact.html" class="black-link">Contact</a>
     </div>
-    <div class="main-container-white">          
-      <h1>Rommel Ryan Rico</h1>
+    <div class="main-container-white">
+      <div class="intro-grid">
+      <div class="index-spaceship">
+        <img class="spaceship" src="./css/img/200.gif" alt="Spaceship">
+      </div>        
+        <h1>Rommel Ryan Rico</h1>
+      </div>
     </div>
   </div>
-
 </body>
 </html>
