--- a/intro.html
+++ b/intro.html
@@ -24,11 +24,13 @@
       <div class="avatar-logo">
         <img class="avatar" src="./css/img/wouthelmet.png" alt="Avatar Logo">
       </div>
+      <div class="intro-spaceship">
+        <img class="spaceship" src="./css/img/200.gif" alt="Spaceship">
+      </div>
       <div class="intro-content">
         <p class="intro-paragraph">Hello my name is Ryan and I'm a full-stack web developer from Melbourne, Australia. I'm on a mission to find the best people to collaborate with!</p>
       </div>
     </div>
   </div>
-  
 </body>
 </html>
