--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,9 @@
     </div>
     <div class="main-container-white">
       <div class="projects-grid">
+        <div class="projects-spaceship">
+          <img class="spaceship" src="./css/img/200.gif" alt="Spaceship">
+        </div>
         <div class="project1">
           <div class="project-overlay"></div>
         </div>
@@ -41,6 +44,5 @@
       </div>
     </div>
   </div>
- 
 </body>
 </html> 
