--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
   <div class="white-navbar">
     <div class="navbar-logo">
-        <a href="index.html"><img class="logo" src="./css/img/logo.png" alt="RRR Logo"></a>
+        <a href="index.html"><img class="logo" src="./css/img/rrr-logo.png" alt="RRR Logo"></a>
     </div>
     <div class="navbar-links">
       <a href="intro.html" class="black-link">Intro</a>
@@ -29,7 +29,7 @@
             <div class="job1"></div>
             <div class="job1-back">
               <div class="job1-back-content">
-                <h4>Salsas Fresh Mex</h4>
+                <a href="https://www.facebook.com/salsasfreshmexgrill/" style="text-decoration:none"><h4>Salsas Fresh Mex</h4></a>
                 <p>Team Leader</p>
                 <p>2010 - 2014</p>
               </div>
@@ -37,14 +37,14 @@
           </div>
         </div>
         <div class="about-spaceship">
-          <img class="spaceship" src="./css/img/200.gif" alt="Spaceship">
+          <img class="spaceship" src="./css/img/spaceship.gif" alt="Spaceship">
         </div>
         <div class="flip-card2">
           <div class="flip-card2-inner">
             <div class="job2"></div>
             <div class="job2-back">
               <div class="job2-back-content">
-                <h4>Aegis Call Center</h4>
+                <a href="http://www.aegiscareers.com.au/" style="text-decoration:none"><h4>Aegis Call Center</h4></a>
                 <p>Customer Service</p>
                 <p>2015 - 2019</p>
               </div>
@@ -59,7 +59,10 @@
             <div class="education1"></div>
             <div class="education1-back">
               <div class="education1-back-content">
-                <h4>Bachelor of Commerce</h4>
+                <a href="https://www.swinburne.edu.au/" style="text-decoration:none">
+                  <h4>Swinburne University</h4>
+                </a>
+                <p>Bachelor of Commerce</p>
                 <p>(Accounting)</p>
                 <p>2013 - 2016</p>
               </div>
@@ -71,7 +74,9 @@
             <div class="education2"></div>
             <div class="education2-back">
               <div class="education2-back-content">
-                <h4>Coder Academy</h4>
+                <a href="https://coderacademy.edu.au/" style="text-decoration:none">
+                  <h4>Coder Academy</h4>
+                </a>
                 <p>(Fast-Track)</p>
                 <p>2019</p>
               </div>
