--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="white-navbar">
     <div class="navbar-logo">
-        <a href="index.html"><img class="logo" src="./css/img/logo.png" alt="RRR Logo"></a>
+        <a href="index.html"><img class="logo" src="./css/img/rrr-logo.png" alt="RRR Logo"></a>
     </div>
     <div class="navbar-links">
       <a href="intro.html" class="black-link">Intro</a>
@@ -21,7 +21,7 @@
     <div class="main-container-white">
       <div class="intro-grid">
       <div class="index-spaceship">
-        <img class="spaceship" src="./css/img/200.gif" alt="Spaceship">
+        <img class="spaceship" src="./css/img/spaceship.gif" alt="Spaceship">
       </div>        
         <h1>Rommel Ryan Rico</h1>
       </div>
