--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,10 @@
         </div>
         <div class="project1">
           <div class="project-overlay">
-            <h4>Landing Page</h4>
-            <p></p>
+            <a href="https://enablr.herokuapp.com/" style="text-decoration:none">
+              <h4>Enablr</h4>
+            </a>
+            <p>(Ruby on Rails Crowdfunding App)</p>
           </div>
         </div>
         <div class="project2">
@@ -34,28 +36,33 @@
             <a href="https://github.com/rommelryanrico/terminal-app" style="text-decoration:none">
               <h4>Here4U</h4>
             </a>
+            <p>(Wellness App in Ruby)</p>
           </div>
         </div>
         <div class="project3">
           <div class="project-overlay">
             <h4>Tennis Club Finder</h4>
+            <p>(Placeholder)</p>
           </div>
         </div>
         <div class="project4">
           <div class="project-overlay">
             <h4>Hong Kong Street Food Guide</h4>
+            <p>(Placeholder)</p>
           </div>
         </div>
         <div class="project5">
           <div class="project-overlay">
             <a href="https://www.youtube.com/user/aodancecrew" style="text-decoration:none">
-              <h4>AO Crew</h4>
+              <h4>AO Crew </h4>
             </a>
+            <p>(Future Project for my Dance Crew)</p>
           </div>
         </div>
         <div class="project6">
           <div class="project-overlay">
             <h4>Photography App</h4>
+            <p>(Placeholder)</p>
           </div>
         </div>
       </div>
